# buttplugpp

./: CMakeLists.txt  vcpkg.json
examples/: main.cpp
src/: ButtplugClient.cpp  ButtplugClient.hpp  Util.hpp
